added a comment to add the dataset Id once it is availabel

--- a/synapse/variant_jamboree/get_files_per_assay.ipynb
+++ b/synapse/variant_jamboree/get_files_per_assay.ipynb
@@ -51,6 +51,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a091e3e-bdde-40e4-9042-fc80d2a2b3c2",
+   "metadata": {},
+   "source": [
+    "### PLEASE CHANGE THE DATASETS IDS, ONCE YOU HAVE THEM. IT IS IN THE END OF THE URL IN THE C COLUMN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "04955724-6d20-4546-baee-e58c873ed6e8",
