--- a/synapse/downalod_files_per_assay.ipynb
+++ b/synapse/downalod_files_per_assay.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92cd5d6a",
+   "id": "9c678b97",
    "metadata": {},
    "source": [
     "FOR the jamboree:\n",
@@ -99,6 +99,8 @@
     "# Specify the list of dataset IDs\n",
     "\n",
     "gs_root_file = \"gs://buenrostro/\"\n",
+    "\n",
+    "# TODO: change the dataset id\n",
     "dataset_ids = list(set([\"syn50944986\"]))\n",
     "print(len(dataset_ids))\n",
     "\n",
@@ -187,9 +189,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4607461f",
+   "metadata": {},
+   "source": [
+    "TODO: Please uncomment the commented lines"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "45d644f0",
+   "id": "47625602",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fccfee07",
+   "id": "eb08969a",
    "metadata": {},
    "outputs": [],
    "source": [
