--- a/synapse/downalod_files_per_assay.ipynb
+++ b/synapse/downalod_files_per_assay.ipynb
@@ -263,7 +263,8 @@
     "  gs_file_path = os.path.join(gs_root_file,dataset_id,file_name)\n",
     "  print('gs_file_path is {}'.format(gs_file_path))\n",
     "  print(\"Execute command gsutil cp {} {}\".format(local_file_path,gs_file_path))\n",
-    "#   !gsutil cp $local_file_path $gs_file_path"
+    "#   !gsutil cp $local_file_path $gs_file_path\n",
+    "# os.remove(local_file_path) # clean the local machine - otherwise might have storage issue"
    ]
   },
   {
