--- a/synapse/downalod_files_per_assay.ipynb
+++ b/synapse/downalod_files_per_assay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "['syn51669616', 'syn51730625']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
      "output_type": "stream",
      "text": [
       "***dataset_id is syn51669616\n",
-      "***files for dataset_id is syn51669616 are <generator object Synapse.getChildren at 0x7fa39f8baed0>\n",
+      "***files for dataset_id is syn51669616 are <generator object Synapse.getChildren at 0x7f59b5ae99d0>\n",
       "file is  {'name': 'Kallisto processed count matrix', 'id': 'syn51684227', 'type': 'org.sagebionetworks.repo.model.Folder', 'versionNumber': 1, 'versionLabel': '1', 'isLatestVersion': True, 'benefactorId': 30073188, 'createdOn': '2023-06-08T17:36:23.447Z', 'modifiedOn': '2023-06-08T17:36:23.447Z', 'createdBy': '3385411', 'modifiedBy': '3385411'}\n",
       "file is  {'name': 'next1_B01_13A_R1.fastq.gz', 'id': 'syn51669860', 'type': 'org.sagebionetworks.repo.model.FileEntity', 'versionNumber': 1, 'versionLabel': '1', 'isLatestVersion': True, 'benefactorId': 30073188, 'createdOn': '2023-06-06T23:10:56.799Z', 'modifiedOn': '2023-06-06T23:10:56.931Z', 'createdBy': '3385411', 'modifiedBy': '3385411'}\n",
       "file is  {'name': 'next1_B01_13A_R2.fastq.gz', 'id': 'syn51669954', 'type': 'org.sagebionetworks.repo.model.FileEntity', 'versionNumber': 1, 'versionLabel': '1', 'isLatestVersion': True, 'benefactorId': 30073188, 'createdOn': '2023-06-06T23:20:04.179Z', 'modifiedOn': '2023-06-06T23:20:04.314Z', 'createdBy': '3385411', 'modifiedBy': '3385411'}\n",
@@ -151,7 +151,7 @@
       "***file_data for dataset_id is syn51669616 are [['syn51669616', 'next1_B01_13A_R1.fastq.gz', 'syn51669860', 1], ['syn51669616', 'next1_B01_13A_R2.fastq.gz', 'syn51669954', 1], ['syn51669616', 'next1_B01_13B_R1.fastq.gz', 'syn51670063', 1], ['syn51669616', 'next1_B01_13B_R2.fastq.gz', 'syn51670124', 1], ['syn51669616', 'next1_B01_13C_R1.fastq.gz', 'syn51670238', 1], ['syn51669616', 'next1_B01_13C_R2.fastq.gz', 'syn51670298', 1], ['syn51669616', 'next1_B01_13D_R1.fastq.gz', 'syn51670431', 1], ['syn51669616', 'next1_B01_13D_R2.fastq.gz', 'syn51670483', 1], ['syn51669616', 'next1_B01_13E_R1.fastq.gz', 'syn51670484', 1], ['syn51669616', 'next1_B01_13E_R2.fastq.gz', 'syn51670493', 1], ['syn51669616', 'next1_B01_13F_R1.fastq.gz', 'syn51670510', 1], ['syn51669616', 'next1_B01_13F_R2.fastq.gz', 'syn51670532', 1], ['syn51669616', 'next1_B01_13G_R1.fastq.gz', 'syn51670585', 1], ['syn51669616', 'next1_B01_13G_R2.fastq.gz', 'syn51670604', 1], ['syn51669616', 'next1_B01_13H_R1.fastq.gz', 'syn51670626', 1], ['syn51669616', 'next1_B01_13H_R2.fastq.gz', 'syn51670627', 1], ['syn51669616', 'next2_B01_13A_R1.fastq.gz', 'syn51670644', 1], ['syn51669616', 'next2_B01_13A_R2.fastq.gz', 'syn51670653', 1], ['syn51669616', 'next2_B01_13B_R1.fastq.gz', 'syn51670664', 1], ['syn51669616', 'next2_B01_13B_R2.fastq.gz', 'syn51670673', 1], ['syn51669616', 'next2_B01_13C_R1.fastq.gz', 'syn51670694', 1], ['syn51669616', 'next2_B01_13C_R2.fastq.gz', 'syn51670704', 1], ['syn51669616', 'next2_B01_13D_R1.fastq.gz', 'syn51670724', 1], ['syn51669616', 'next2_B01_13D_R2.fastq.gz', 'syn51670735', 1], ['syn51669616', 'next2_B01_13E_R1.fastq.gz', 'syn51670762', 1], ['syn51669616', 'next2_B01_13E_R2.fastq.gz', 'syn51670776', 1], ['syn51669616', 'next2_B01_13F_R1.fastq.gz', 'syn51670807', 1], ['syn51669616', 'next2_B01_13F_R2.fastq.gz', 'syn51670819', 1], ['syn51669616', 'next2_B01_13G_R1.fastq.gz', 'syn51670842', 1], ['syn51669616', 'next2_B01_13G_R2.fastq.gz', 'syn51670851', 1], ['syn51669616', 'next2_B01_13H_R1.fastq.gz', 'syn51670862', 1], ['syn51669616', 'next2_B01_13H_R2.fastq.gz', 'syn51670869', 1]]\n",
       "add dataset data  syn51669616\n",
       "***dataset_id is syn51730625\n",
-      "***files for dataset_id is syn51730625 are <generator object Synapse.getChildren at 0x7fa39f8baf50>\n",
+      "***files for dataset_id is syn51730625 are <generator object Synapse.getChildren at 0x7f59b5ae9d50>\n",
       "file is  {'name': 'barcode-1_onlist_v2.txt', 'id': 'syn51730646', 'type': 'org.sagebionetworks.repo.model.FileEntity', 'versionNumber': 1, 'versionLabel': '1', 'isLatestVersion': True, 'benefactorId': 30073188, 'createdOn': '2023-06-21T20:48:36.157Z', 'modifiedOn': '2023-06-21T20:48:36.157Z', 'createdBy': '3385411', 'modifiedBy': '3385411'}\n",
       "file is  {'name': 'barcode-23_onlist.txt', 'id': 'syn51730647', 'type': 'org.sagebionetworks.repo.model.FileEntity', 'versionNumber': 1, 'versionLabel': '1', 'isLatestVersion': True, 'benefactorId': 30073188, 'createdOn': '2023-06-21T20:48:38.423Z', 'modifiedOn': '2023-06-21T20:48:38.423Z', 'createdBy': '3385411', 'modifiedBy': '3385411'}\n",
       "file is  {'name': 'bc_data_n192_v4.csv', 'id': 'syn51730631', 'type': 'org.sagebionetworks.repo.model.FileEntity', 'versionNumber': 1, 'versionLabel': '1', 'isLatestVersion': True, 'benefactorId': 30073188, 'createdOn': '2023-06-21T20:34:05.240Z', 'modifiedOn': '2023-06-21T20:34:05.240Z', 'createdBy': '3385411', 'modifiedBy': '3385411'}\n",
@@ -190,7 +190,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(all_file_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +250,7 @@
        " ['syn51669616', 'next2_B01_13H_R2.fastq.gz', 'syn51670869', 1]]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +270,7 @@
        "'/home/jupyter/IGVF Single-Cell Data Processing Jamboree/edit'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,8 +311,98 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "code_folding": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dataset_id is syn51669616\n",
+      "file_id is syn51670063\n",
+      "file_name is next1_B01_13B_R1.fastq.gz\n",
+      "local_file_full_path is /home/jupyter/eila/next1_B01_13B_R1.fastq.gz\n",
+      "local_file_ls is ['B01_13B_R1.fastq.gz']\n",
+      "dst_file_name is next1_B01_13B_R1.fastq.gz\n",
+      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13B_R1.fastq.gz\n",
+      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13B_R1.fastq.gz/B01_13B_R1.fastq.gz']\n",
+      "file_name exists. next1_B01_13B_R1.fastq.gz. nothing to copy\n",
+      "dataset_id is syn51669616\n",
+      "file_id is syn51670124\n",
+      "file_name is next1_B01_13B_R2.fastq.gz\n",
+      "local_file_full_path is /home/jupyter/eila/next1_B01_13B_R2.fastq.gz\n",
+      "local_file_ls is ['B01_13B_R2.fastq.gz']\n",
+      "dst_file_name is next1_B01_13B_R2.fastq.gz\n",
+      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13B_R2.fastq.gz\n",
+      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13B_R2.fastq.gz/B01_13B_R2.fastq.gz']\n",
+      "file_name exists. next1_B01_13B_R2.fastq.gz. nothing to copy\n",
+      "dataset_id is syn51669616\n",
+      "file_id is syn51670238\n",
+      "file_name is next1_B01_13C_R1.fastq.gz\n",
+      "local_file_full_path is /home/jupyter/eila/next1_B01_13C_R1.fastq.gz\n",
+      "local_file_ls is ['B01_13C_R1.fastq.gz']\n",
+      "dst_file_name is next1_B01_13C_R1.fastq.gz\n",
+      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13C_R1.fastq.gz\n",
+      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13C_R1.fastq.gz/B01_13C_R1.fastq.gz']\n",
+      "file_name exists. next1_B01_13C_R1.fastq.gz. nothing to copy\n",
+      "dataset_id is syn51669616\n",
+      "file_id is syn51670298\n",
+      "file_name is next1_B01_13C_R2.fastq.gz\n",
+      "local_file_full_path is /home/jupyter/eila/next1_B01_13C_R2.fastq.gz\n",
+      "local_file_ls is ['B01_13C_R2.fastq.gz']\n",
+      "dst_file_name is next1_B01_13C_R2.fastq.gz\n",
+      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13C_R2.fastq.gz\n",
+      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13C_R2.fastq.gz/B01_13C_R2.fastq.gz']\n",
+      "file_name exists. next1_B01_13C_R2.fastq.gz. nothing to copy\n",
+      "dataset_id is syn51669616\n",
+      "file_id is syn51670431\n",
+      "file_name is next1_B01_13D_R1.fastq.gz\n",
+      "local_file_full_path is /home/jupyter/eila/next1_B01_13D_R1.fastq.gz\n",
+      "local_file_ls is ['B01_13D_R1.fastq.gz']\n",
+      "dst_file_name is next1_B01_13D_R1.fastq.gz\n",
+      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13D_R1.fastq.gz\n",
+      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13D_R1.fastq.gz/B01_13D_R1.fastq.gz']\n",
+      "file_name exists. next1_B01_13D_R1.fastq.gz. nothing to copy\n",
+      "dataset_id is syn51669616\n",
+      "file_id is syn51670483\n",
+      "file_name is next1_B01_13D_R2.fastq.gz\n",
+      "local_file_full_path is /home/jupyter/eila/next1_B01_13D_R2.fastq.gz\n",
+      "local_file_ls is ['B01_13D_R2.fastq.gz']\n",
+      "dst_file_name is next1_B01_13D_R2.fastq.gz\n",
+      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13D_R2.fastq.gz\n",
+      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13D_R2.fastq.gz/B01_13D_R2.fastq.gz']\n",
+      "file_name exists. next1_B01_13D_R2.fastq.gz. nothing to copy\n",
+      "dataset_id is syn51669616\n",
+      "file_id is syn51670484\n",
+      "file_name is next1_B01_13E_R1.fastq.gz\n",
+      "local_file_full_path is /home/jupyter/eila/next1_B01_13E_R1.fastq.gz\n",
+      "local_file_ls is ['B01_13E_R1.fastq.gz']\n",
+      "dst_file_name is next1_B01_13E_R1.fastq.gz\n",
+      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13E_R1.fastq.gz\n",
+      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13E_R1.fastq.gz/B01_13E_R1.fastq.gz']\n",
+      "file_name exists. next1_B01_13E_R1.fastq.gz. nothing to copy\n",
+      "dataset_id is syn51669616\n",
+      "file_id is syn51670493\n",
+      "file_name is next1_B01_13E_R2.fastq.gz\n",
+      "local_file_full_path is /home/jupyter/eila/next1_B01_13E_R2.fastq.gz\n",
+      "local_file_ls is ['B01_13E_R2.fastq.gz']\n",
+      "dst_file_name is next1_B01_13E_R2.fastq.gz\n",
+      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13E_R2.fastq.gz\n",
+      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13E_R2.fastq.gz/B01_13E_R2.fastq.gz']\n",
+      "file_name exists. next1_B01_13E_R2.fastq.gz. nothing to copy\n",
+      "dataset_id is syn51669616\n",
+      "file_id is syn51670510\n",
+      "file_name is next1_B01_13F_R1.fastq.gz\n",
+      "local_file_full_path is /home/jupyter/eila/next1_B01_13F_R1.fastq.gz\n",
+      "local_file_ls is []\n",
+      "dst_file_name is next1_B01_13F_R1.fastq.gz\n",
+      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13F_R1.fastq.gz\n",
+      "ls_output_gs is ['CommandException: One or more URLs matched no objects.']\n",
+      "downloading next1_B01_13F_R1.fastq.gz\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "for entry in all_file_data[2:]:\n",
@@ -308,82 +418,27 @@
     "  print('local_file_full_path is {}'.format(local_file_full_path))\n",
     "  local_file_ls = !ls $local_file_full_path\n",
     "  print('local_file_ls is {}'.format(local_file_ls))\n",
-    "  if (\"cannot access\" in local_file_ls[0]):\n",
-    "    print('downloading {}'.format(file_name))\n",
-    "    entity = syn.get(file_id,downloadLocation=local_file_full_path) # will download the file locally\n",
-    "    print('finished local doanloading {}'.format(file_name))\n",
-    "  else:\n",
-    "    print('file_name exists. copying {}'.format(file_name))\n",
     "  dst_file_name = file_name.replace(\" \",\"_\")\n",
     "  print('dst_file_name is {}'.format(dst_file_name))\n",
     "  # TODO: change here the name of the dataset that you are downloading. For example: \"igvf_b01_LeftCortex\"\n",
     "  gs_file_path = os.path.join(gs_root_file,\"igvf_b01_LeftCortex\",dataset_id,dst_file_name)\n",
     "  print('gs_file_path is {}'.format(gs_file_path))\n",
-    "  \n",
+    "\n",
     "  ls_output_gs = !gsutil ls $gs_file_path\n",
     "  print('ls_output_gs is {}'.format(ls_output_gs))\n",
     "  if \"CommandException\" in ls_output_gs[0]:\n",
+    "    if (len(local_file_ls) == 0):\n",
+    "      print('downloading {} to local directory {}'.format(file_name,local_file_path))\n",
+    "      entity = syn.get(file_id,downloadLocation=local_file_full_path) # will download the file locally\n",
+    "      print('finished local doanloading {}'.format(file_name))\n",
+    "    else:\n",
+    "      print(\"local file: {} exists\".format(file_name))\n",
+    "    \n",
     "    print(\"Execute command gsutil cp -r {} {}\".format(local_file_full_path,gs_file_path))\n",
     "    !gsutil cp -r $local_file_full_path $gs_file_path\n",
-    "#   os.remove(local_file_full_path) # clean the local machine - otherwise might have storage issue"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !rm -r /home/jupyter/eila/next1_B01_13A_R1.fastq.gz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !ls /home/jupyter/eila/\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !gsutil cp /home/jupyter/eila/next1_B01_13A_R1.fastq.gz gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13A_R1.fastq.gz\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !gsutil cp /home/jupyter/IGVF\\ Single-Cell\\ Data\\ Processing\\ Jamboree/edit/next1_B01_13A_R2.fastq.gz gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FATQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13A_R1.fastq.gz\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !ls "
+    "    os.remove(local_file_full_path) # clean the local machine - otherwise might have storage issue\n",
+    "  else:\n",
+    "    print('file_name exists. {}. nothing to copy'.format(file_name))"
    ]
   },
   {
