--- a/synapse/downalod_files_per_assay.ipynb
+++ b/synapse/downalod_files_per_assay.ipynb
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "code_folding": []
    },
@@ -370,58 +370,7 @@
       "local_file_full_path is /home/jupyter/eila/next1_B01_13D_R2.fastq.gz\n",
       "local_file_ls is ['B01_13D_R2.fastq.gz']\n",
       "dst_file_name is next1_B01_13D_R2.fastq.gz\n",
-      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13D_R2.fastq.gz\n",
-      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13D_R2.fastq.gz/B01_13D_R2.fastq.gz']\n",
-      "file_name exists. next1_B01_13D_R2.fastq.gz. nothing to copy\n",
-      "dataset_id is syn51669616\n",
-      "file_id is syn51670484\n",
-      "file_name is next1_B01_13E_R1.fastq.gz\n",
-      "local_file_full_path is /home/jupyter/eila/next1_B01_13E_R1.fastq.gz\n",
-      "local_file_ls is ['B01_13E_R1.fastq.gz']\n",
-      "dst_file_name is next1_B01_13E_R1.fastq.gz\n",
-      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13E_R1.fastq.gz\n",
-      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13E_R1.fastq.gz/B01_13E_R1.fastq.gz']\n",
-      "file_name exists. next1_B01_13E_R1.fastq.gz. nothing to copy\n",
-      "dataset_id is syn51669616\n",
-      "file_id is syn51670493\n",
-      "file_name is next1_B01_13E_R2.fastq.gz\n",
-      "local_file_full_path is /home/jupyter/eila/next1_B01_13E_R2.fastq.gz\n",
-      "local_file_ls is ['B01_13E_R2.fastq.gz']\n",
-      "dst_file_name is next1_B01_13E_R2.fastq.gz\n",
-      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13E_R2.fastq.gz\n",
-      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13E_R2.fastq.gz/B01_13E_R2.fastq.gz']\n",
-      "file_name exists. next1_B01_13E_R2.fastq.gz. nothing to copy\n",
-      "dataset_id is syn51669616\n",
-      "file_id is syn51670510\n",
-      "file_name is next1_B01_13F_R1.fastq.gz\n",
-      "local_file_full_path is /home/jupyter/eila/next1_B01_13F_R1.fastq.gz\n",
-      "local_file_ls is ['B01_13F_R1.fastq.gz']\n",
-      "dst_file_name is next1_B01_13F_R1.fastq.gz\n",
-      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13F_R1.fastq.gz\n",
-      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13F_R1.fastq.gz/B01_13F_R1.fastq.gz']\n",
-      "file_name exists. next1_B01_13F_R1.fastq.gz. nothing to copy\n",
-      "dataset_id is syn51669616\n",
-      "file_id is syn51670532\n",
-      "file_name is next1_B01_13F_R2.fastq.gz\n",
-      "local_file_full_path is /home/jupyter/eila/next1_B01_13F_R2.fastq.gz\n",
-      "local_file_ls is [\"ls: cannot access '/home/jupyter/eila/next1_B01_13F_R2.fastq.gz': No such file or directory\"]\n",
-      "dst_file_name is next1_B01_13F_R2.fastq.gz\n",
-      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13F_R2.fastq.gz\n",
-      "ls_output_gs is ['CommandException: One or more URLs matched no objects.']\n",
-      "local file: next1_B01_13F_R2.fastq.gz exists\n",
-      "Execute command gsutil cp -r /home/jupyter/eila/next1_B01_13F_R2.fastq.gz gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13F_R2.fastq.gz\n",
-      "CommandException: No URLs matched: /home/jupyter/eila/next1_B01_13F_R2.fastq.gz\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home/jupyter/eila/next1_B01_13F_R2.fastq.gz'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_10948/3706730564.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Execute command gsutil cp -r {} {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocal_file_full_path\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgs_file_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'gsutil cp -r $local_file_full_path $gs_file_path'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m     \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrmdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocal_file_full_path\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# clean the local machine - otherwise might have storage issue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m   \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'file_name exists. {}. nothing to copy'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/jupyter/eila/next1_B01_13F_R2.fastq.gz'"
+      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13D_R2.fastq.gz\n"
      ]
     }
    ],
@@ -458,9 +407,27 @@
     "    \n",
     "    print(\"Execute command gsutil cp -r {} {}\".format(local_file_full_path,gs_file_path))\n",
     "    !gsutil cp -r $local_file_full_path $gs_file_path\n",
-    "    os.rmdir(local_file_full_path) # clean the local machine - otherwise might have storage issue\n",
+    "    import shutil\n",
+    "    shutil.rmtree(local_file_full_path,ignore_errors=True)\n",
     "  else:\n",
     "    print('file_name exists. {}. nothing to copy'.format(file_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ls: cannot access 'local_file_full_path': No such file or directory\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls local_file_full_path"
    ]
   },
   {
