--- a/synapse/downalod_files_per_assay.ipynb
+++ b/synapse/downalod_files_per_assay.ipynb
@@ -281,35 +281,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !gsutil ls gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/B01_13A_8R1.fastq.gz\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# t = !ls 2next1_B01_13A_R2.fastq.gz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# t[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "code_folding": []
@@ -320,63 +291,53 @@
      "output_type": "stream",
      "text": [
       "dataset_id is syn51669616\n",
-      "file_id is syn51670063\n",
-      "file_name is next1_B01_13B_R1.fastq.gz\n",
-      "local_file_full_path is /home/jupyter/eila/next1_B01_13B_R1.fastq.gz\n",
-      "local_file_ls is ['B01_13B_R1.fastq.gz']\n",
-      "dst_file_name is next1_B01_13B_R1.fastq.gz\n",
-      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13B_R1.fastq.gz\n",
-      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13B_R1.fastq.gz/B01_13B_R1.fastq.gz']\n",
-      "file_name exists. next1_B01_13B_R1.fastq.gz. nothing to copy\n",
+      "file_id is syn51670510\n",
+      "file_name is next1_B01_13F_R1.fastq.gz\n",
+      "local_file_full_path is /home/jupyter/eila/next1_B01_13F_R1.fastq.gz\n",
+      "local_file_ls is ['B01_13F_R1.fastq.gz']\n",
+      "dst_file_name is next1_B01_13F_R1.fastq.gz\n",
+      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13F_R1.fastq.gz\n",
+      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13F_R1.fastq.gz/B01_13F_R1.fastq.gz']\n",
+      "file_name exists. next1_B01_13F_R1.fastq.gz. nothing to copy\n",
       "dataset_id is syn51669616\n",
-      "file_id is syn51670124\n",
-      "file_name is next1_B01_13B_R2.fastq.gz\n",
-      "local_file_full_path is /home/jupyter/eila/next1_B01_13B_R2.fastq.gz\n",
-      "local_file_ls is ['B01_13B_R2.fastq.gz']\n",
-      "dst_file_name is next1_B01_13B_R2.fastq.gz\n",
-      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13B_R2.fastq.gz\n",
-      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13B_R2.fastq.gz/B01_13B_R2.fastq.gz']\n",
-      "file_name exists. next1_B01_13B_R2.fastq.gz. nothing to copy\n",
+      "file_id is syn51670532\n",
+      "file_name is next1_B01_13F_R2.fastq.gz\n",
+      "local_file_full_path is /home/jupyter/eila/next1_B01_13F_R2.fastq.gz\n",
+      "local_file_ls is [\"ls: cannot access '/home/jupyter/eila/next1_B01_13F_R2.fastq.gz': No such file or directory\"]\n",
+      "dst_file_name is next1_B01_13F_R2.fastq.gz\n",
+      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13F_R2.fastq.gz\n",
+      "ls_output_gs is ['CommandException: One or more URLs matched no objects.']\n",
+      "downloading next1_B01_13F_R2.fastq.gz to local directory /home/jupyter/eila/\n",
+      "finished local doanloading next1_B01_13F_R2.fastq.gz\n",
+      "Execute command gsutil cp -r /home/jupyter/eila/next1_B01_13F_R2.fastq.gz gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13F_R2.fastq.gz\n",
+      "Copying file:///home/jupyter/eila/next1_B01_13F_R2.fastq.gz/B01_13F_R2.fastq.gz [Content-Type=application/octet-stream]...\n",
+      "==> NOTE: You are uploading one or more large file(s), which would run          \n",
+      "significantly faster if you enable parallel composite uploads. This\n",
+      "feature can be enabled by editing the\n",
+      "\"parallel_composite_upload_threshold\" value in your .boto\n",
+      "configuration file. However, note that if you do this large files will\n",
+      "be uploaded as `composite objects\n",
+      "<https://cloud.google.com/storage/docs/composite-objects>`_,which\n",
+      "means that any user who downloads such objects will need to have a\n",
+      "compiled crcmod installed (see \"gsutil help crcmod\"). This is because\n",
+      "without a compiled crcmod, computing checksums on composite objects is\n",
+      "so slow that gsutil disables downloads of composite objects.\n",
+      "\n",
+      "\\ [1 files][  6.4 GiB/  6.4 GiB]   86.8 MiB/s                                   \n",
+      "Operation completed over 1 objects/6.4 GiB.                                      \n",
       "dataset_id is syn51669616\n",
-      "file_id is syn51670238\n",
-      "file_name is next1_B01_13C_R1.fastq.gz\n",
-      "local_file_full_path is /home/jupyter/eila/next1_B01_13C_R1.fastq.gz\n",
-      "local_file_ls is ['B01_13C_R1.fastq.gz']\n",
-      "dst_file_name is next1_B01_13C_R1.fastq.gz\n",
-      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13C_R1.fastq.gz\n",
-      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13C_R1.fastq.gz/B01_13C_R1.fastq.gz']\n",
-      "file_name exists. next1_B01_13C_R1.fastq.gz. nothing to copy\n",
-      "dataset_id is syn51669616\n",
-      "file_id is syn51670298\n",
-      "file_name is next1_B01_13C_R2.fastq.gz\n",
-      "local_file_full_path is /home/jupyter/eila/next1_B01_13C_R2.fastq.gz\n",
-      "local_file_ls is ['B01_13C_R2.fastq.gz']\n",
-      "dst_file_name is next1_B01_13C_R2.fastq.gz\n",
-      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13C_R2.fastq.gz\n",
-      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13C_R2.fastq.gz/B01_13C_R2.fastq.gz']\n",
-      "file_name exists. next1_B01_13C_R2.fastq.gz. nothing to copy\n",
-      "dataset_id is syn51669616\n",
-      "file_id is syn51670431\n",
-      "file_name is next1_B01_13D_R1.fastq.gz\n",
-      "local_file_full_path is /home/jupyter/eila/next1_B01_13D_R1.fastq.gz\n",
-      "local_file_ls is ['B01_13D_R1.fastq.gz']\n",
-      "dst_file_name is next1_B01_13D_R1.fastq.gz\n",
-      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13D_R1.fastq.gz\n",
-      "ls_output_gs is ['gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13D_R1.fastq.gz/B01_13D_R1.fastq.gz']\n",
-      "file_name exists. next1_B01_13D_R1.fastq.gz. nothing to copy\n",
-      "dataset_id is syn51669616\n",
-      "file_id is syn51670483\n",
-      "file_name is next1_B01_13D_R2.fastq.gz\n",
-      "local_file_full_path is /home/jupyter/eila/next1_B01_13D_R2.fastq.gz\n",
-      "local_file_ls is ['B01_13D_R2.fastq.gz']\n",
-      "dst_file_name is next1_B01_13D_R2.fastq.gz\n",
-      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13D_R2.fastq.gz\n"
+      "file_id is syn51670585\n",
+      "file_name is next1_B01_13G_R1.fastq.gz\n",
+      "local_file_full_path is /home/jupyter/eila/next1_B01_13G_R1.fastq.gz\n",
+      "local_file_ls is [\"ls: cannot access '/home/jupyter/eila/next1_B01_13G_R1.fastq.gz': No such file or directory\"]\n",
+      "dst_file_name is next1_B01_13G_R1.fastq.gz\n",
+      "gs_file_path is gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13G_R1.fastq.gz\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "for entry in all_file_data[2:]:\n",
+    "for entry in all_file_data[10:]:\n",
     "  # TODO: change this to a local folder that is on your machine\n",
     "  local_file_path=\"/home/jupyter/eila/\"\n",
     "  dataset_id = entry[0]\n",
@@ -398,7 +359,7 @@
     "  ls_output_gs = !gsutil ls $gs_file_path\n",
     "  print('ls_output_gs is {}'.format(ls_output_gs))\n",
     "  if \"CommandException\" in ls_output_gs[0]:\n",
-    "    if (len(local_file_ls) == 0):\n",
+    "    if (\"cannot access\" in local_file_ls[0] or len(local_file_ls)==0):\n",
     "      print('downloading {} to local directory {}'.format(file_name,local_file_path))\n",
     "      entity = syn.get(file_id,downloadLocation=local_file_full_path) # will download the file locally\n",
     "      print('finished local doanloading {}'.format(file_name))\n",
@@ -415,19 +376,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"ls: cannot access '/home/jupyter/eila/next2_B01_13H_R1.fastq.gz': No such file or directory\""
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "local_file_ls[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ls: cannot access 'local_file_full_path': No such file or directory\r\n"
+      "next1_B01_13A_R1.fastq.gz  next1_B01_13C_R1.fastq.gz  next1_B01_13E_R1.fastq.gz\r\n",
+      "next1_B01_13A_R2.fastq.gz  next1_B01_13C_R2.fastq.gz  next1_B01_13E_R2.fastq.gz\r\n",
+      "next1_B01_13B_R1.fastq.gz  next1_B01_13D_R1.fastq.gz  next1_B01_13F_R1.fastq.gz\r\n",
+      "next1_B01_13B_R2.fastq.gz  next1_B01_13D_R2.fastq.gz\r\n"
      ]
     }
    ],
    "source": [
-    "!ls local_file_full_path"
+    "!ls /home/jupyter/eila/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13A_R1.fastq.gz/\r\n",
+      "gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13A_R2.fastq.gz/\r\n",
+      "gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13B_R1.fastq.gz/\r\n",
+      "gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13B_R2.fastq.gz/\r\n",
+      "gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13C_R1.fastq.gz/\r\n",
+      "gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13C_R2.fastq.gz/\r\n",
+      "gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13D_R1.fastq.gz/\r\n",
+      "gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13D_R2.fastq.gz/\r\n",
+      "gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13E_R1.fastq.gz/\r\n",
+      "gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13E_R2.fastq.gz/\r\n",
+      "gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/next1_B01_13F_R1.fastq.gz/\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gsutil ls gs://fc-secure-0a879173-62d3-4c3a-8fc3-e35ee4248901/FASTQ/igvf_b01_LeftCortex/syn51669616/"
    ]
   },
   {
